--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -515,6 +515,10 @@ a.article, a.article:hover {
 
 }
 
+.nav-logo {
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
 
 
 
@@ -584,6 +588,11 @@ footer a {
 }
 
 .margin-l-r-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
+.no-side-margin {
     margin-left: 0px;
     margin-right: 0px;
 }
