changing cart styling  for mobiles

--- a/templates/base.html
+++ b/templates/base.html
@@ -160,10 +160,7 @@
                 </div>
             </div>
             {% endif %}
-        <!-- **************** missing a div from here************ -->
-        <!-- **************** missing a div from here************ -->     
-        <!-- **************** missing a div from here************ -->
-        <!-- **************** missing a div from here************ -->    
+     
 
         
 
@@ -178,6 +175,7 @@
 
      
       {% block content %} {% endblock %}
+        </div>
       <footer>
          <div class="container">
             <p>Made Blood, Sweat and lots of Tears......</p>
