--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -3,111 +3,156 @@
 {% load bootstrap_tags %}
 
 {% block content %}
-<!-- <div class="row row-flex">
-    {% for item in cart_items %}
-    <div class="col-lg-4 col-md-6 mb-4">
-        <div class=" card h-100">
-            <div class="product card-img-top" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image1 }}')"></div>     
-            <div class="card-body">
-                <h4 class="card-title text-center">{{ item.product.name }}</h4>
-                <h5 class= "text-center">€{{ item.product.price }}</h5>
-                <div class= "d-flex justify-content-center">
-                    <form class="form-inline" method="post" action="{% url 'adjust_cart' item.id %}">
-                    {% csrf_token %}
-                        <div class="input-group">
-                        <div class="input-group-addon">Qty</div>
-                            <input name="quantity" type="number" min="0" max="999"  class="form-control" required>
-                            <div class="input-group-addon">{{item.quantity}}</div>
-                            <div class="input-group-btn ">
-                                <button class="btn btn-primary  glyphicon glyphicon-editX" aria-hidden="true" type="submit">UPDATE</button>
+
+
+
+<div id="mobile-shopping-cart" class="d-lg-none">
+    <div class="col-12">
+        <div class="table-responsivex ">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for item in cart_items %}
+                    <tr>
+                        <td>
+                            <div class="product card-img-top" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image1 }}')"></div>
+                        </td>
+                        <td class="">
+                            <div class="d-flex justify-content">
+                                <h4>{{ item.product.name }}</h4>
                             </div>
-                        </div>
-                    </form>
-                                        <form class="delete-form" action="{% url 'cart_item_delete' item.id %}" method="post">
-                                            {% csrf_token %}
-                                            <button type="submit" class="bin-btn"><span><i class="fas fa-trash-alt"></i></span></button>
-                                        </form>
-                </div>
-            </div>
-            <div class="card-footer">
-            </div>
-        </div>
-    </div>
-    {% endfor %}
-</div>
-<div class="row">
-    <p>Total</p>
-    <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ total }}</p>
-    <a href="{% url 'checkout' %}" class="btn btn-success" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>Checkout</a>
-</div> -->
-
-
-
-<div class="container mb-4">
-    <div class="row">
-        <div class="col-12">
-            <div class="table-responsive ">
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th scope="col"> </th>
-                            <th scope="col">Product</th>
-                            <th class="text-center" scope="col">Unit Price</th>
-                            <th scope="col" class="text-center">Quantity</th>
-                            <th scope="col" class="text-center">Update Quantity</th>
-                            <th> </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for item in cart_items %}
-                        <tr>
-                            <td><div class="product card-img-top" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image1 }}')"></div></td>
-                            <td class="align-middle">{{ item.product.name }}</td>
-                            <td class="align-middle text-center">€{{ item.product.price }}</td>
-                             {% csrf_token %}
-                             <td class="align-middle text-center">{{item.quantity}}</td>
-                            <td class="align-middle text-center">
-                                <form class="form-inlinex align-middle text-center" method="post" action="{% url 'adjust_cart' item.id %}">
-                                {% csrf_token %}
-                                    <div class="input-group align-middle text-center">
-                                        <input name="quantity" type="number" min="0" max="999"  class="form-control" required>
-                                        <!-- <div class="input-group-addon">{{item.quantity}}</div> -->
-                                        <div class="input-group-btn ">
-                                            <button class="btn btn-primary  glyphicon glyphicon-editX" aria-hidden="true" type="submit"><i class="fas fa-edit"></i></button>
+                            <div class="d-flex justify-content">
+                                <div>
+                                    <h5 class="">Unit Price = €</h5>
+                                </div>
+                                <div class="">
+                                    <h5 class="float-right">{{ item.product.price }}</h5>
+                                </div>
+                            </div>
+                            <div class="d-flex justify-content">
+                                <div class="">
+                                    <form class="form-inline" method="post" action="{% url 'adjust_cart' item.id %}">
+                                        {% csrf_token %}
+                                        <div class="input-group">
+                                            <input name="quantity" type="number" min="0" max="999" placeholder="{{item.quantity}}" class="form-control" required>
+                                            <div class="input-group-btn ">
+                                                <button class="btn btn-primary  glyphicon glyphicon-edit" aria-hidden="true" type="submit"></button>
+                                            </div>
                                         </div>
-                                    </div>
-                                </form>
-                            </td>
-                            <!-- <td class="text-right">????</td> -->
-                            <td class="align-middle text-center"><form class="delete-form" action="{% url 'cart_item_delete' item.id %}" method="post">
-                                            {% csrf_token %}
-                                            <button type="submit" class="btn btn-sm btn-danger"><span><i class="fas fa-trash-alt"></i></span></button>
- </form> </td>
-                        </tr>
-                         {% endfor %}
-                         <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td><strong>Total</strong></td>
-                            <td class="text-right"><strong>€{{ total }}</strong></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+                                    </form>
+                                </div>
+                                <div class="delete-button">
+                                    <form class="delete-form" action="{% url 'cart_item_delete' item.id %}" method="post">
+                                        {% csrf_token %}
+                                        <button type="submit" class="btn  btn-danger"><span><i class="fas fa-trash-alt"></i></span></button>
+                                    </form>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                    <tr>
+                        <td><strong>Total</strong></td>
+                        <td class="text-right"><strong>€{{ total }}</strong></td>
+
+                    </tr>
+                </tbody>
+            </table>
         </div>
-        <div class="col mb-2">
-            <div class="row">
-                <div class="col-sm-12  col-md-6">
-                    <a href="{% url 'products' %}"><button class="btn btn-block btn-light">Continue Shopping</button></a>
-                </div>
-                <div class="col-sm-12 col-md-6 text-right">
-                    <a href="{% url 'checkout' %}"><button class="btn btn-lg btn-block btn-success text-uppercase">Checkout</button></a>
-                </div>
+    </div>
+    <div class="col mb-2">
+        <div class="row">
+            <div class="col-sm-12  col-md-6">
+                <a href="{% url 'products' %}">
+                    <button class="btn btn-block btn-light">Continue Shopping</button>
+                </a>
+            </div>
+            <div class="col-sm-12 col-md-6 text-right">
+                <a href="{% url 'checkout' %}">
+                    <button class="btn btn-lg btn-block btn-success text-uppercase">Checkout</button>
+                </a>
             </div>
         </div>
     </div>
 </div>
+
+<div id="desktop-shopping-cart" class="d-none d-lg-block">
+    <div class="col-12">
+        <div class="table-responsive ">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th scope="col"> </th>
+                        <th scope="col">Product</th>
+                        <th class="text-center" scope="col">Unit Price</th>
+                        <th scope="col" class="text-center">Quantity</th>
+                        <th scope="col" class="text-center">Update Quantity</th>
+                        <th> </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for item in cart_items %}
+                    <tr>
+                        <td>
+                            <div class="product card-img-top" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image1 }}')"></div>
+                        </td>
+                        <td class="align-middle">{{ item.product.name }}</td>
+                        <td class="align-middle text-center">€{{ item.product.price }}</td>
+                        {% csrf_token %}
+                        <td class="align-middle text-center">{{item.quantity}}</td>
+                        <td class="align-middle text-center ">
+                            <form class="form-inlinex align-middle text-center" method="post" action="{% url 'adjust_cart' item.id %}">
+                                {% csrf_token %}
+                                <div class="input-group align-middle text-center">
+                                    <input name="quantity" type="number" min="0" max="999" placeholder="{{item.quantity}}" class="form-control" required>
+
+                                    <div class="input-group-btn ">
+                                        <button class="btn btn-primary  glyphicon glyphicon-editX" aria-hidden="true" type="submit"><i class="fas fa-edit"></i></button>
+                                    </div>
+                                </div>
+                            </form>
+                        </td>
+                        <td class="align-middle text-center">
+                            <form class="delete-form" action="{% url 'cart_item_delete' item.id %}" method="post">
+                                {% csrf_token %}
+                                <button type="submit" class="btn btn-sm btn-danger"><span><i class="fas fa-trash-alt"></i></span></button>
+                            </form>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td><strong>Total</strong></td>
+                        <td class="text-right"><strong>€{{ total }}</strong></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div class="col mb-2">
+        <div class="row">
+            <div class="col-sm-12  col-md-6">
+                <a href="{% url 'products' %}">
+                    <button class="btn btn-block btn-light">Continue Shopping</button>
+                </a>
+            </div>
+            <div class="col-sm-12 col-md-6 text-right">
+                <a href="{% url 'checkout' %}">
+                    <button class="btn btn-lg btn-block btn-success text-uppercase">Checkout</button>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 
 {% endblock %}
