--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -14,8 +14,50 @@
 
 {% block content %}
 
-<div class="container mb-4">
-    <div class="row">
+<div id="mobile-shopping-cart" class="d-lg-none">
+    <div class="col-12">
+        <div class="">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for item in cart_items %}
+                    <tr>
+                        <td>
+                            <div class="product card-img-top" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image1 }}')"></div>
+                        </td>
+                        <td class="">
+                            <div class="d-flex justify-content">
+                                <h4>{{ item.product.name }}</h4>
+                            </div>
+                            <div class="d-flex justify-content">
+                                <div>
+                                    <h5 class="">Quanity </h5>
+                                </div>
+                                <div class="">
+                                    <h5 class="float-right">=  {{item.quantity}}</h5>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                    <tr>
+                        <td><strong>Total</strong></td>
+                        <td class="text-right"><strong>€{{ total }}</strong></td>
+
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
+
+<div id="desktop-shopping-cart" class="d-none d-lg-block">
         <div class="col-12">
             <div class="table-responsive ">
                 <table class="table table-striped">
@@ -44,8 +86,8 @@
                 </table>
             </div>
         </div>
-     </div>
 </div>
+
 
 
 
@@ -81,6 +123,6 @@
         <input class=" btn btn-primary" id="submit_payment_btn" name="commit" type="submit" value="Submit Payment">
     </div>
 </form>
-</div>
+
 
 {% endblock %}
